--- a/vignettes/how_to_run_subnational_global_models.Rmd
+++ b/vignettes/how_to_run_subnational_global_models.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "How to run a global subnational model with a spatial component"
+title: "How to run a global subnational model with or without a spatial component"
 author: "Hannah Comiskey"
 date: "`r Sys.Date()`"
 output: html_document
