updates to names for merge into national package

--- a/vignettes/how_to_run_subnational_global_models.Rmd
+++ b/vignettes/how_to_run_subnational_global_models.Rmd
@@ -175,7 +175,7 @@ The parameters of this function include:
 
 
 ```{r, message=FALSE, eval=FALSE}
-get_P_point_estimates(main_path = "results/global_nonspatial/", pkg_data, local=FALSE, spatial=FALSE, mycountry=NULL)
+get_subnational_P_point_estimates(main_path = "results/global_nonspatial/", pkg_data, local=FALSE, spatial=FALSE, mycountry=NULL)
 ```
 
 
@@ -188,12 +188,12 @@ The parameters of this function include:
 - vis_path: The pathway to the folder you wish to store your visualisations in. 
 
 ```{r, include=TRUE, message=FALSE, eval=FALSE}
-plot_point_estimates(main_path = "results/global_nonspatial/", pkg_data = pkg_data, vis_path = "visualisations/global_nonspatial/", local=FALSE, mycountry=NULL)
+plot_subnational_point_estimates(main_path = "results/global_nonspatial/", pkg_data = pkg_data, vis_path = "visualisations/global_nonspatial/", local=FALSE, mycountry=NULL)
 ```
 
 ## Ta-da! 
 
-We can review the model plots by navigating to the pathway labelled as 'vis_path' from the 'plot_point_estimates' function above.
+We can review the model plots by navigating to the pathway labelled as 'vis_path' from the 'plot_subnational_point_estimates' function above.
 
 ```{r, echo=FALSE, message=FALSE}
 knitr::include_graphics("Ghana_Western_p.pdf", error=FALSE, dpi = 300)
